src/test/ui/compile-fail-migration/nonscalar-cast.stderr
error[E0605]: non-primitive cast: `foo` as `isize`
  --> $DIR/nonscalar-cast.rs:17:20
   |
LL |     println!("{}", foo{ x: 1 } as isize); //~ non-primitive cast: `foo` as `isize` [E0605]
   |                    ^^^^^^^^^^^^^^^^^^^^
   |
   = note: an `as` expression can only be used to convert between primitive types. Consider using the `From` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0605`.
